--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,7 +1,1 @@
-<script crossorigin="anonymous"
-    type="application/javascript" src="{{ "js/frameworks.js" | absURL }}"></script>
-
-<script crossorigin="anonymous"
-    type="application/javascript" src="{{ "js/github-bootstrap.js" | absURL }}"></script>
-<script src="{{ "js/stop.js" | absURL }}"></script>
-<script src="{{ "js/contributions.js" | absURL }}"></script>
+<script type="application/javascript" src="{{ "js/github-style.js" | absURL }}"></script>
