--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 
 <body>
   {{ partial "header" . }}
-  <!-- {{ block "content" . }}{{ end }} -->
+  {{ block "content" . }}{{ end }}
   <!-- {{ partial "footer.html" . }} -->
 </body>
 
