--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,8 @@
 {{ define "content" }}
-<div class="application-main " data-commit-hovercards-enabled>
+<div class="application-main">
   <main>
-    <div class="container-xl clearfix px-3 mt-4">
+    {{ partial "user-profile.html" . }}
 
-      {{ partial "user-profile.html" . }}
-
-      {{ partial "posts.html" .}}
-
-  </main>
+    {{ partial "posts.html" .}}
 </div>
 {{end }}
