--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <script type="application/javascript" src="{{ "js/theme-mode.js" | absURL }}"></script>
+    <link rel="stylesheet" href="{{ "css/frameworks.min.css" | absURL }}" />
+    <link rel="stylesheet" href="{{ "css/github.min.css" | absURL }}" />
     <link rel="stylesheet" href="{{ "css/github-style.css" | absURL }}" />
     <link rel="stylesheet" href="{{ "css/light.css" | absURL }}" />
     <link rel="stylesheet" href="{{ "css/dark.css" | absURL }}" />
