--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -1,54 +1,55 @@
 <div class="application-main " data-commit-hovercards-enabled="">
-    <div itemscope="" itemtype="http://schema.org/SoftwareSourceCode" class="">
-        <main>
-            <div class="pagehead repohead instapaper_ignore readability-menu experiment-repo-nav pt-0 pt-lg-4 ">
-                <div class="repohead-details-container clearfix container-lg p-responsive d-none d-lg-block">
-                    <div class="mb-3 d-flex">
-                        <h1 class="public css-truncate float-none flex-auto width-fit pl-0">
-                            <a class="avatar mr-1" href="{{ absURL "about/" }}">
-                                {{ with $.Site.Params.avatar }}
-                                    <img src="{{  $.Site.Params.avatar  }}" width="26" height="26">
-                                {{ else }}
-                                    <img src="{{ "images/avatar.png" | absURL }}" width="26" height="26">
-                                {{ end }}
-                            </a>
-                            <span class="author"><a href="{{ .Site.BaseURL }}">{{ .Site.Params.author }}</a></span>
-                            <span class="path-divider">/</span>
-                            <strong itemprop="name" class="css-truncate-target" style="max-width: 410px"><a
-                                    href="{{ .Permalink }}">{{ .Title }}</a></strong>
+  <div itemscope="" itemtype="http://schema.org/SoftwareSourceCode" class="">
+    <main>
+      <div class="pagehead repohead instapaper_ignore readability-menu experiment-repo-nav pt-0 pt-lg-4 ">
+        <div class="repohead-details-container clearfix container-lg p-responsive d-none d-lg-block">
+          <div class="mb-3 d-flex">
+            <h1 class="public css-truncate float-none flex-auto width-fit pl-0">
+              <a class="avatar mr-1" href="{{ absURL "about/" }}">
+                {{ with $.Site.Params.avatar }}
+                <img src="{{  $.Site.Params.avatar  }}" width="26" height="26">
+                {{ else }}
+                <img src="{{ "images/avatar.png" | absURL }}" width="26" height="26">
+                {{ end }}
+              </a>
+              <span class="author"><a href="{{ .Site.BaseURL }}">{{ .Site.Params.author }}</a></span>
+              <span class="path-divider">/</span>
+              <strong itemprop="name" class="css-truncate-target" style="max-width: 410px"><a
+                  href="{{ .Permalink }}">{{ .Title }}</a></strong>
 
-                            <div class="d-block text-small text-gray">
-                                Created <time-ago datetime="{{ .PublishDate.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}" class="no-wrap">
-                                    Mon, 02 Jan 2006 15:04:05 -0700</time-ago>
-                                <span class="file-info-divider"></span>
-                                Modified <time-ago datetime="{{ .Lastmod.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}" class="no-wrap">
-                                        Mon, 02 Jan 2006 15:04:05 -0700</time-ago>
-                            </div>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-            <div class="container-lg clearfix new-discussion-timeline experiment-repo-nav  p-responsive">
-                <div class="repository-content ">
-                    <div class="Box mt-3 position-relative">
-                        <div class="Box-header py-2 d-flex flex-column flex-shrink-0 flex-md-row flex-md-items-center">
-                            <div class="text-mono f6 flex-auto pr-3 flex-order-2 flex-md-order-1 mt-2 mt-md-0">
-                                {{ countwords .Content }} Words
-                                <!-- <span class="file-info-divider"></span>
+              <div class="d-block text-small text-gray">
+                Created <time-ago datetime="{{ .PublishDate.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}"
+                  class="no-wrap">
+                  Mon, 02 Jan 2006 15:04:05 -0700</time-ago>
+                <span class="file-info-divider"></span>
+                Modified <time-ago datetime="{{ .Lastmod.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}" class="no-wrap">
+                  Mon, 02 Jan 2006 15:04:05 -0700</time-ago>
+              </div>
+            </h1>
+          </div>
+        </div>
+      </div>
+      <div class="container-lg clearfix new-discussion-timeline experiment-repo-nav  p-responsive">
+        <div class="repository-content ">
+          <div class="Box mt-3 position-relative">
+            <div class="Box-header py-2 d-flex flex-column flex-shrink-0 flex-md-row flex-md-items-center">
+              <div class="text-mono f6 flex-auto pr-3 flex-order-2 flex-md-order-1 mt-2 mt-md-0">
+                {{ countwords .Content }} Words
+                <!-- <span class="file-info-divider"></span>
                                 {{ .ReadingTime }} min -->
-                            </div>
-                        </div>
-
-                        <div id="readme" class="Box-body readme blob instapaper_body js-code-block-container">
-                            <article class="markdown-body entry-content p-3 p-md-6" itemprop="text">
-                                {{- .Content -}}
-                            </article>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
-        </main>
-    </div>
+
+            <div id="readme" class="Box-body readme blob instapaper_body js-code-block-container">
+              <article class="markdown-body entry-content p-3 p-md-6" itemprop="text">
+                {{- .Content -}}
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
 </div>
 {{ if .Site.Params.utterances }}
 <div class="utterances"></div>
@@ -60,17 +61,17 @@
         async>
 </script> -->
 <script>
-    var systemThemeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
-    var systemTheme = systemThemeMediaQuery.matches ? 'dark' : 'light';
-    var utterancesTheme = systemTheme === 'dark' ? 'github-dark' : 'github-light';
-    var utterancesScript = document.createElement('script');
-    utterancesScript.src = 'https://utteranc.es/client.js';
-    utterancesScript.setAttribute('repo', '{{ .Site.Params.utterances }}');
-    utterancesScript.setAttribute('issue-term', 'title');
-    utterancesScript.setAttribute('theme', utterancesTheme);
-    utterancesScript.setAttribute('crossorigin', 'anonymous');
-    utterancesScript.setAttribute('async', '');
-    document.querySelector('.utterances').appendChild(utterancesScript);
+  var systemThemeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
+  var systemTheme = systemThemeMediaQuery.matches ? 'dark' : 'light';
+  var utterancesTheme = systemTheme === 'dark' ? 'github-dark' : 'github-light';
+  var utterancesScript = document.createElement('script');
+  utterancesScript.src = 'https://utteranc.es/client.js';
+  utterancesScript.setAttribute('repo', '{{ .Site.Params.utterances }}');
+  utterancesScript.setAttribute('issue-term', 'title');
+  utterancesScript.setAttribute('theme', utterancesTheme);
+  utterancesScript.setAttribute('crossorigin', 'anonymous');
+  utterancesScript.setAttribute('async', '');
+  document.querySelector('.utterances').appendChild(utterancesScript);
 </script>
 <noscript>Please enable JavaScript to view the comments</noscript>
 {{ end }}
