--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -3,66 +3,49 @@
 {{ $section_count := len $section }}
 {{ $n_posts := $.Param "recent_posts_number" | default 6 }}
 <div class="col-lg-9 col-md-8 col-12 float-md-left pl-md-2">
-    <div class="UnderlineNav width-full user-profile-nav top-0 is-placeholder"
-        style="visibility: hidden; display: none; height: 56px;"></div>
-    <div class="UnderlineNav width-full user-profile-nav js-sticky top-0"
-        style="position: static; top: 0px; left: 330.5px; width: 911.5px;">
-        <nav class="UnderlineNav-body" aria-label="User profile">
-            <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}">
-                Overview
-            </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "posts/" }}">
-                Posts
-                <span class="Counter hide-lg hide-md hide-sm">
-                    {{ $section_count}}
-                </span>
-            </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ absURL "about/" }}">
-                About
-            </a>
-        </nav>
-    </div>
+  <div class="UnderlineNav width-full user-profile-nav top-0 is-placeholder"
+    style="visibility: hidden; display: none; height: 56px;"></div>
 
-    <div class="position-relative">
-        <div id="user-repositories-list">
-            <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
-                {{ range .Paginator.Pages }}
-                <li class="col-12 d-flex width-full py-4 border-bottom public fork">
-                    <div class="col-12 col-lg-12 d-inline-block">
-                        <div class="d-inline-block mb-1">
-                            <h3>
-                                <a href="{{ .Permalink }}">{{ .Title }}</a>
-                            </h3>
-                        </div>
 
-                        <div name="posts-post" class="text-gray mb-2 pr-4">
-                            {{ .Summary | safeHTML }}
-                        </div>
-                        <div class="f6 text-gray mt-2">
-                            Updated <time-ago datetime="{{ .Lastmod.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}" class="no-wrap">
-                                Mon, 02 Jan 2006 15:04:05 -0700</time-ago>
-                        </div>  
-                    </div>
-                </li>
-                {{ end }}
-            </ul>
-            {{ if gt .Paginator.TotalPages 1}}
-            <div class="paginate-container">
-                <div class="BtnGroup" data-test-selector="pagination">
-                    {{ if .Paginator.HasPrev }}
-                    <a rel="nofollow" class="btn btn-outline BtnGroup-item"
-                        href="{{ .Paginator.Prev.URL }}">Previous</a>
-                    {{ else }}
-                    <button class="btn btn-outline BtnGroup-item" disabled="disabled">Previous</button>
-                    {{ end }}
-                    {{ if .Paginator.HasNext }}
-                    <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ .Paginator.Next.URL }}">Next</a>
-                    {{ else }}
-                    <button class="btn btn-outline BtnGroup-item" disabled="disabled">Next</button>
-                    {{ end }}
-                </div>
+  <div class="position-relative">
+    <div id="user-repositories-list">
+      <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
+        {{ range .Paginator.Pages }}
+        <li class="col-12 d-flex width-full py-4 border-bottom public fork">
+          <div class="col-12 col-lg-12 d-inline-block">
+            <div class="d-inline-block mb-1">
+              <h3>
+                <a href="{{ .Permalink }}">{{ .Title }}</a>
+              </h3>
             </div>
-            {{ end }}
+
+            <div name="posts-post" class="text-gray mb-2 pr-4">
+              {{ .Summary | safeHTML }}
+            </div>
+            <div class="f6 text-gray mt-2">
+              Updated <time-ago datetime="{{ .Lastmod.Format "Mon, 02 Jan 2006 15:04:05 -0700" }}" class="no-wrap">
+                Mon, 02 Jan 2006 15:04:05 -0700</time-ago>
+            </div>
+          </div>
+        </li>
+        {{ end }}
+      </ul>
+      {{ if gt .Paginator.TotalPages 1}}
+      <div class="paginate-container">
+        <div class="BtnGroup" data-test-selector="pagination">
+          {{ if .Paginator.HasPrev }}
+          <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ .Paginator.Prev.URL }}">Previous</a>
+          {{ else }}
+          <button class="btn btn-outline BtnGroup-item" disabled="disabled">Previous</button>
+          {{ end }}
+          {{ if .Paginator.HasNext }}
+          <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ .Paginator.Next.URL }}">Next</a>
+          {{ else }}
+          <button class="btn btn-outline BtnGroup-item" disabled="disabled">Next</button>
+          {{ end }}
         </div>
+      </div>
+      {{ end }}
     </div>
+  </div>
 </div>
