--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -103,5 +103,10 @@
         </div>
       </div>
     </div>
+    {{ if .IsHome }}
+    {{ block "overview" . }}{{ end }}
+    {{ else }}
+    {{ block "posts" . }}{{ end }}
+    {{ end }}
   </div>
 </div>
