完成首页基本逻辑

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
 <body>
   {{ partial "header" . }}
   {{ block "content" . }}{{ end }}
-  <!-- {{ partial "footer.html" . }} -->
+  {{ partial "footer.html" . }}
 </body>
 
 {{ partial "script.html" . }}
