--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,6 +9,7 @@
         </svg>
       </a>
     </div>
+    <!-- TODO: fix theme -->
     <div class="Header-item Header-item--full">
       <div class="Header-search">
         <form target="_blank" action="https://www.google.com/search" accept-charset="UTF-8" method="get"
