--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -3,17 +3,30 @@
   <div class="gutter-condensed gutter-lg flex-column flex-md-row d-flex">
     <div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0">
       <div class="h-card mt-md-n5">
+        <div class="user-profile-sticky-bar js-user-profile-sticky-bar d-none d-md-block" id="headerStuck">
+          <div class="user-profile-mini-vcard d-table">
+            <span class="user-profile-mini-avatar d-table-cell v-align-middle lh-condensed-ultra pr-2">
+              {{ with $.Site.Params.avatar }}
+              <img class="rounded-1 avatar-user" height="32" width="32" src="{{ $.Site.Params.avatar }}">
+              {{ else }}
+              <img class="rounded-1 avatar-user" height="32" width="32" src="{{ "images/avatar.png" | absURL }}">
+              {{ end }}
+            </span>
+            <span class="d-table-cell v-align-middle lh-condensed">
+              <strong>{{ .Site.Params.author }}</strong>
+            </span>
+          </div>
+        </div>
         <div class="clearfix d-flex d-md-block flex-items-center mb-4 mb-md-0">
           <div class="position-relative d-inline-block col-2 col-md-12 mr-3 mr-md-0 flex-shrink-0" style="z-index:4;">
-            <!-- TODO: 页面上移后的样式变化 -->
             {{ with $.Site.Params.avatar }}
-            <a href="{{ $.Site.Params.avatar  }}">
-              <img style="height:auto;" alt="Avatar" width="260" height="260"
-                class="avatar avatar-user width-full border bg-white" src="{{ $.Site.Params.avatar  }}">
+            <a href="{{ $.Site.Params.avatar }}">
+              <img style="height:auto;" alt="Avatar" width="260" height="260" id="headerImg"
+                class="avatar avatar-user width-full border bg-white" src="{{ $.Site.Params.avatar }}">
             </a>
             {{ else }}
             <a href="{{ "images/avatar.png" | absURL }}">
-              <img style="height:auto;" alt="Avatar" width="260" height="260"
+              <img style="height:auto;" alt="Avatar" width="260" height="260" id="headerImg"
                 class="avatar avatar-user width-full border bg-white" src="{{ "images/avatar.png" | absURL }}">
             </a>
             {{ end }}
@@ -97,7 +110,7 @@
           {{ end }}
 
           {{ if .Site.Params.rss }}
-          <a class="avatar-group-item" href="{{ "posts/index.xml" | absURL }}">
+          <a class="avatar-group-item" href="{{ "/index.xml" | absURL }}">
             <img alt="@rss" width="32" height="32" src="{{ "images/rss.png" | absURL }}" class="avatar">
           </a>
           {{ end }}
