添加 header 栏的移动端样式

--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -124,3 +124,13 @@
     {{ end }}
   </div>
 </div>
+<script>
+window.onscroll = function (e) {
+  const headerImg = document.querySelector('#headerImg');
+  if (headerImg.getBoundingClientRect().bottom <= 0) {
+    document.querySelector('#headerStuck').classList.add('is-stuck');
+  } else {
+    document.querySelector('#headerStuck').classList.remove('is-stuck');
+  }
+};
+</script>
