--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -39,3 +39,19 @@
 {{ with .OutputFormats.Get "json" }}
 <link href="{{ .RelPermalink }}" rel="alternate" type="application/json" title="{{ $.Site.Title }}" />
 {{ end }}
+
+<!-- Google Analytics -->
+{{ if eq (getenv "HUGO_ENV") "production"}}
+{{ with .Site.GoogleAnalytics }}
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
+<script>
+  if (navigator.doNotTrack !== '1') {
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', '{{ . }}');
+  }
+</script>
+{{ end }}
+{{ end }}
